python/cactus/bindings/cactus.py


_lib.cactus_complete.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p, ctypes.c_size_t,
    ctypes.c_char_p, ctypes.c_char_p, TokenCallback, ctypes.c_void_p,
    ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t
]
_lib.cactus_complete.restype = ctypes.c_int

_lib.cactus_prefill.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p, ctypes.c_size_t,
    ctypes.c_char_p, ctypes.c_char_p,
    ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t
]
_lib.cactus_prefill.restype = ctypes.c_int

_lib.cactus_transcribe.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p, ctypes.c_char_p,
    ctypes.c_size_t, ctypes.c_char_p, TokenCallback, ctypes.c_void_p,
    ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t
]
_lib.cactus_transcribe.restype = ctypes.c_int

_bind_optional(
    "cactus_detect_language",
    [
        ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p, ctypes.c_size_t,
        ctypes.c_char_p, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t,
    ],
    ctypes.c_int,
)

_lib.cactus_embed.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_float),
    ctypes.c_size_t, ctypes.POINTER(ctypes.c_size_t), ctypes.c_bool
]
_lib.cactus_embed.restype = ctypes.c_int

_lib.cactus_image_embed.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_float),
    ctypes.c_size_t, ctypes.POINTER(ctypes.c_size_t)
]
_lib.cactus_image_embed.restype = ctypes.c_int

_lib.cactus_audio_embed.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_float),
    ctypes.c_size_t, ctypes.POINTER(ctypes.c_size_t)
]
_lib.cactus_audio_embed.restype = ctypes.c_int

try:
    _lib.cactus_preprocess_audio_features.argtypes = [
        ctypes.c_char_p, ctypes.c_char_p, ctypes.c_size_t,
        ctypes.POINTER(ctypes.c_float), ctypes.c_size_t,
        ctypes.POINTER(ctypes.c_size_t), ctypes.POINTER(ctypes.c_size_t),
        ctypes.POINTER(ctypes.c_size_t)
    ]
    _lib.cactus_preprocess_audio_features.restype = ctypes.c_int
except AttributeError:
    pass


_lib.cactus_reset.argtypes = [ctypes.c_void_p]
_lib.cactus_reset.restype = None

_lib.cactus_stop.argtypes = [ctypes.c_void_p]
_lib.cactus_stop.restype = None

_lib.cactus_destroy.argtypes = [ctypes.c_void_p]
_lib.cactus_destroy.restype = None

_lib.cactus_get_last_error.argtypes = []
_lib.cactus_get_last_error.restype = ctypes.c_char_p

_lib.cactus_tokenize.argtypes = [
    ctypes.c_void_p,
    ctypes.c_char_p,
    ctypes.POINTER(ctypes.c_uint32),
    ctypes.c_size_t,
    ctypes.POINTER(ctypes.c_size_t),
]
_lib.cactus_tokenize.restype = ctypes.c_int

_bind_optional(
    "cactus_decode_tokens",
    [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
        ctypes.c_size_t,
        ctypes.c_float,
        ctypes.c_float,
        ctypes.c_size_t,
        ctypes.POINTER(ctypes.c_uint32),
    ],
    ctypes.c_int,
)

_lib.cactus_score_window.argtypes = [
    ctypes.c_void_p,
    ctypes.POINTER(ctypes.c_uint32),
    ctypes.c_size_t,
    ctypes.c_size_t,
    ctypes.c_size_t,
    ctypes.c_size_t,
    ctypes.c_char_p,
    ctypes.c_size_t,
]
_lib.cactus_score_window.restype = ctypes.c_int

_lib.cactus_rag_query.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p,
    ctypes.c_size_t, ctypes.c_size_t
]
_lib.cactus_rag_query.restype = ctypes.c_int

_bind_optional("cactus_stream_transcribe_start", [ctypes.c_void_p, ctypes.c_char_p], ctypes.c_void_p)

_bind_optional(
    "cactus_stream_transcribe_process",
    [
        ctypes.c_void_p, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t,
        ctypes.c_char_p, ctypes.c_size_t,
    ],
    ctypes.c_int,
)

_bind_optional(
    "cactus_stream_transcribe_stop",
    [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_size_t],
    ctypes.c_int,
)

_lib.cactus_index_init.argtypes = [ctypes.c_char_p, ctypes.c_size_t]
_lib.cactus_index_init.restype = ctypes.c_void_p

_lib.cactus_index_add.argtypes = [
    ctypes.c_void_p,
    ctypes.POINTER(ctypes.c_int),
    ctypes.POINTER(ctypes.c_char_p),
    ctypes.POINTER(ctypes.c_char_p),
    ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
    ctypes.c_size_t,
    ctypes.c_size_t
]
_lib.cactus_index_add.restype = ctypes.c_int

_lib.cactus_index_delete.argtypes = [
    ctypes.c_void_p,
    ctypes.POINTER(ctypes.c_int),
    ctypes.c_size_t
]
_lib.cactus_index_delete.restype = ctypes.c_int

_lib.cactus_index_query.argtypes = [
    ctypes.c_void_p,
    ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
    ctypes.c_size_t,
    ctypes.c_size_t,
    ctypes.c_char_p,
    ctypes.POINTER(ctypes.POINTER(ctypes.c_int)),
    ctypes.POINTER(ctypes.c_size_t),
    ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
    ctypes.POINTER(ctypes.c_size_t)
]
_lib.cactus_index_query.restype = ctypes.c_int

_lib.cactus_index_compact.argtypes = [ctypes.c_void_p]
_lib.cactus_index_compact.restype = ctypes.c_int

_lib.cactus_index_destroy.argtypes = [ctypes.c_void_p]
_lib.cactus_index_destroy.restype = None

_lib.cactus_index_get.argtypes = [
    ctypes.c_void_p,
    ctypes.POINTER(ctypes.c_int),
    ctypes.c_size_t,
    ctypes.POINTER(ctypes.c_char_p),
    ctypes.POINTER(ctypes.c_size_t),
    ctypes.POINTER(ctypes.c_char_p),
    ctypes.POINTER(ctypes.c_size_t),
    ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
    ctypes.POINTER(ctypes.c_size_t)
]
_lib.cactus_index_get.restype = ctypes.c_int

_lib.cactus_set_app_id.argtypes = [ctypes.c_char_p]
_lib.cactus_set_app_id.restype = None

_lib.cactus_telemetry_flush.argtypes = []
_lib.cactus_telemetry_flush.restype = None

_lib.cactus_telemetry_shutdown.argtypes = []
_lib.cactus_telemetry_shutdown.restype = None

LogCallback = ctypes.CFUNCTYPE(None, ctypes.c_int, ctypes.c_char_p, ctypes.c_char_p, ctypes.c_void_p)

_lib.cactus_log_set_level.argtypes = [ctypes.c_int]
_lib.cactus_log_set_level.restype = None

_lib.cactus_log_set_callback.argtypes = [LogCallback, ctypes.c_void_p]
_lib.cactus_log_set_callback.restype = None


def _enc(s):
    """Encode a string to bytes for C, or pass through None/bytes."""
    if s is None:
        return None
    return s.encode() if isinstance(s, str) else s


def _to_json(obj):
    """Accept str, bytes, dict, list, or None — return encoded bytes for C."""
    if obj is None:
        return None
    if isinstance(obj, (dict, list)):
        return json.dumps(obj).encode()
    if isinstance(obj, str):
        return obj.encode()
    return obj


def _from_json(buf):
    """Decode a ctypes string buffer to a dict. Returns {} on empty."""
    text = buf.value.decode("utf-8", errors="ignore")
    if not text:
        return {}
    return json.loads(text)


def _prepare_pcm(pcm_data):
    """Marshal pcm_data bytes to (ctypes_ptr, size) for C. Returns (None, 0) if None."""
    if pcm_data is None:
        return None, 0
    pcm_arr = (ctypes.c_uint8 * len(pcm_data))(*pcm_data)
    return ctypes.cast(pcm_arr, ctypes.POINTER(ctypes.c_uint8)), len(pcm_data)


def _make_token_callback(callback):
    """Wrap a Python callback(text, token_id) into a C-compatible TokenCallback."""
    if not callback:
        return TokenCallback()
    def _bridge(token_bytes, token_id, _):
        callback(token_bytes.decode("utf-8", errors="ignore") if token_bytes else "", token_id)
    return TokenCallback(_bridge)


def cactus_get_last_error():
    """Returns the last error message from the C runtime, or None."""
    result = _lib.cactus_get_last_error()
    return result.decode() if result else None


def _err(default):
    return cactus_get_last_error() or default


# ── Telemetry ────────────────────────────────────────────────────────


def cactus_set_telemetry_environment(framework, cache_location, version):
    """Sets telemetry environment (framework name, cache path, version)."""
    _lib.cactus_set_telemetry_environment(_enc(framework), _enc(cache_location), _enc(version))


def cactus_set_app_id(app_id):
    """Sets the application identifier for telemetry."""
    _lib.cactus_set_app_id(_enc(app_id))


def cactus_telemetry_flush():
    """Flushes pending telemetry events."""
    _lib.cactus_telemetry_flush()


def cactus_telemetry_shutdown():
    """Shuts down the telemetry subsystem."""
    _lib.cactus_telemetry_shutdown()


# ── Model lifecycle ──────────────────────────────────────────────────


def cactus_init(model_path, corpus_dir=None, cache_index=False):
    """Load a model from disk.

    Args:
        model_path: Path to the converted model weights directory.
        corpus_dir: Optional path to a RAG corpus directory.
        cache_index: Whether to cache the RAG index to disk.

    Returns:
        An opaque model handle. Pass to other cactus_* functions.
        Call cactus_destroy() when done.
    """
    handle = _lib.cactus_init(_enc(model_path), _enc(corpus_dir), cache_index)
    if not handle:
        raise RuntimeError(_err("Failed to initialize model"))
    return handle


def cactus_destroy(model):
    """Free all resources associated with a model handle."""
    _lib.cactus_destroy(model)


def cactus_reset(model):
    """Clear the KV cache, resetting the model to a fresh conversation state."""
    _lib.cactus_reset(model)


def cactus_stop(model):
    """Signal the model to stop the current generation early."""
    _lib.cactus_stop(model)


# ── LLM completion ───────────────────────────────────────────────────


def cactus_complete(model, messages, options=None, tools=None, callback=None, pcm_data=None):
    """Run chat completion.

    Args:
        model:    Model handle from cactus_init().
        messages: List of message dicts, e.g. [{"role": "user", "content": "Hi"}].
                  Also accepts a pre-serialized JSON string.
        options:  Optional dict of generation options (temperature, max_tokens, etc.).
        tools:    Optional list of tool definitions for function calling.
        callback: Optional function(text, token_id) called on each generated token.
        pcm_data: Optional raw PCM audio bytes for audio-capable models.

    Returns:
        A dict with the completion response and metrics.
    """
    buf = ctypes.create_string_buffer(65536)
    cb = _make_token_callback(callback)
    pcm_ptr, pcm_size = _prepare_pcm(pcm_data)
    rc = _lib.cactus_complete(
        model, _to_json(messages), buf, len(buf),
        _to_json(options), _to_json(tools), cb, None, pcm_ptr, pcm_size,
    )
    if rc < 0:
        raise RuntimeError(_err("Completion failed"))
    return _from_json(buf)


def cactus_prefill(model, messages, options=None, tools=None, pcm_data=None):
    """Pre-fill the KV cache with messages without generating a response.

    Returns:
        A dict with prefill stats (tokens processed, latency, etc.).
    """
    buf = ctypes.create_string_buffer(65536)
    pcm_ptr, pcm_size = _prepare_pcm(pcm_data)
    rc = _lib.cactus_prefill(
        model, _to_json(messages), buf, len(buf),
        _to_json(options), _to_json(tools), pcm_ptr, pcm_size,
    )
    if rc < 0:
        raise RuntimeError(_err("Prefill failed"))
    return _from_json(buf)


# ── Audio / speech ───────────────────────────────────────────────────


def cactus_transcribe(model, audio_path, prompt=None, options=None, callback=None, pcm_data=None):
    """Transcribe audio to text.

    Args:
        model:      Model handle.
        audio_path: Path to a WAV audio file.
        prompt:     Optional prompt to guide transcription.
        options:    Optional dict of transcription options.
        callback:   Optional function(text, token_id) for streaming tokens.
        pcm_data:   Optional raw PCM audio bytes (alternative to audio_path).
